# example-fastapi

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: db.py  main.py
app/home/: routers.py
app/items/: crud.py  db.py  enums.py  models.py  routers.py  schemas.py
db/: base.py  heroes.py
devops/: Dockerfile  docker-compose.yml
endpoints/: heroes.py
heroes/: models.py
