[tool.poetry]
name = "example-fastapi"
version = "0.1.0"
description = ""
authors = ["Alixey Yudin <alixey.yudin@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"
databases = "^0.7.0"
aiosqlite = "^0.18.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
